# sea_creature_projection_fun

./: .gitignore  CMakeLists.txt  README.md
src/create_texture_animation/: create_simple_texture_map.cpp
src/pipe_example/: main.c  main_fork_exec_pipe.c  main_fork_exec_pipe.cpp  main_simple_pipe.c  main_simple_pipe.cpp
src/raylib_examples/: main_figures_bouncing.cpp  main_render_pipeline.cpp  main_render_pipeline_moving_figures.cpp  main_render_pipeline_moving_figures_scaling.cpp  main_textures_bouncing.cpp
